[project]
name = "claude-codex-proxy"
version = "0.1.0"
description = "Universal HTTP proxy and Python library that routes Anthropic, OpenAI, and Gemini API calls to local CLI tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Claude & Codex API Router Contributors" }
]
keywords = ["anthropic", "openai", "gemini", "proxy", "cli", "claude", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "mitmproxy>=10.0.0",
    "cryptography>=41.0.0",
    "google-genai>=1.0.0",
    "requests>=2.31.0",
    "bcrypt==4.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "poethepoet>=0.24.0",
]

[project.scripts]
claude-codex-proxy = "claude_codex_proxy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_codex_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.poe.tasks]
start = { cmd = "python -m claude_codex_proxy.cli", help = "Start the proxy server" }
test = { cmd = "pytest", help = "Run tests" }
test-verbose = { cmd = "pytest -v", help = "Run tests with verbose output" }
setup = { cmd = "python -m claude_codex_proxy.setup_proxy", help = "Run proxy setup" }
